* g++.dg/lookup/strong-using-1.C: New.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75598 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-09  Alexandre Oliva  <aoliva@redhat.com>
+
+	* g++.dg/lookup/strong-using-1.C: New.
+
 2004-01-09  Joseph S. Myers  <jsm@polyomino.org.uk>
 
 	PR c/11234
