* name-lookup.c (qualified_lookup_using_namespace): Consider strong using directives even if we've already found a binding.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75599 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-09  Alexandre Oliva  <aoliva@redhat.com>
+
+	* name-lookup.c (qualified_lookup_using_namespace): Consider
+	strong using directives even if we've already found a binding.
+
 2004-01-09  Mark Mitchell  <mark@codesourcery.com>
 
 	* cp-tree.h (cxx_expand_expr): Change prototype.
