--- a/gcc-3_3-rhl-branch/ChangeLog
+++ b/gcc-3_3-rhl-branch/ChangeLog
@@ -1,3 +1,12 @@
+2004-01-04  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	* MAINTAINERS: Move myself from 'Write After Approval' to
+	'CPU Port Maintainers' section as SPARC maintainer.
+
+2004-01-02  Roger Sayle  <roger@eyesopen.com>
+
+	* configure.in (ia64*-*-hpux*): Disable building java libraries.
+
 2003-10-21  Matt Thomas  <matt@3am-software.com>
 
 	* MAINTAINERS: Add myself as a vax port maintainer.
