--- a/gcc-3_3-rhl-branch/gcc/ChangeLog
+++ b/gcc-3_3-rhl-branch/gcc/ChangeLog
@@ -1,3 +1,167 @@
+2004-01-02  Roger Sayle  <roger@eyesopen.com>
+
+	* tree.h (integer_nonzerop): Use PARAMS macro with prototype.
+	* tree.c (integer_nonzerop): Use K&R style function declaration.
+
+2004-01-02  Andreas Schwab  <schwab@suse.de>
+
+	* doc/c-tree.texi: Fix @item vs. @itemx.
+	* doc/cpp.texi: Likewise.
+	* doc/install.texi: Likewise.
+	* doc/invoke.texi: Likewise.
+
+2004-01-02  Andreas Jaeger  <aj@suse.de>, Gerald Pfeifer  <gp@suse.de>
+
+	* doc/install.texi (Specific): Mention x86_64.
+
+2004-01-01  Jakub Jelinek  <jakub@redhat.com>
+
+	PR optimization/13521
+	Backport from mainline:
+		2003-03-22  Richard Henderson <rth@redhat.com>
+
+		* cfgcleanup.c (insns_match_p): Do not do EQUIV substitution
+		after reload.
+
+2003-12-31  Roger Sayle  <roger@eyesopen.com>
+
+	PR fortran/12632
+	* tree.c (integer_nonzerop): New predicate for nonzero integers.
+	* tree.h (integer_nonzerop): Add function prototype.
+	* fold-const.c (fold) <COND_EXPR>: Don't fold a constant condition,
+	if we'd replace a COND_EXPR of non-void type by one of its operands
+	of void type.
+
+2003-12-31  Kazu Hirata  <kazu@cs.umass.edu>
+
+	Backport from mainline:
+
+	2003-09-12  Richard Sandiford  <rsandifo@redhat.com>
+
+	PR target/13373
+	* config/mcore/mcore-protos.h (mcore_r15_operand_p): Declare.
+	(mcore_secondary_reload_class): Declare.
+	(mcore_output_inline_const_forced): Remove.
+	* config/mcore/mcore.md (movsi): Remove the code that forced
+	non-inlineable constants into a register if the target was r15
+	or the stack pointer.  Remove constant restrictions from the main
+	define_insn.  Remove r <- I, r <- M and r <- N alternatives in favor
+	of an r <- P alternative.  Remove fallback define_insn for reload.
+	(movhi, movqi): Use gen_lowpart rather than gen_SUBREG.  Remove reload
+	define_insn.  Use mcore_output_move in the remaining define_insn.
+	Adjust condition and constraints in the way as for movsi.
+	(movdi): Always split unacceptable constants into two.  Use
+	simplify_gen_subreg instead of operand_subword{,_force}.
+	* config/mcore/mcore.c (mcore_output_inline_const_forced): Remove.
+	(mcore_output_move): Support HImode and QImode moves as well.
+	(mcore_m15_operand_p): New function.
+	(mcore_reload_class): Use it to detect cases where LRW_REGS are better.
+	(mcore_secondary_reload_class): New function.
+	* config/mcore/mcore.h (SECONDARY_RELOAD_CLASS): Redefine in
+	terms of mcore_secondary_reload_class.
+
+2003-12-31  Zack Weinberg  <zack@codesourcery.com>
+
+	* config/ia64/ia64.c (ia64_va_arg): Pass pointer for
+	variable-sized type through convert_memory_address.
+	(ia64_in_small_data_p): Always return false for FUNCTION_DECLs.
+
+2003-12-24  Andrew Pinski  <pinskia@physics.uc.edu>
+
+	PR bootstrap/13068
+	Backport from mainline:
+		2003-05-09  Matt Kraai <kraai@alumni.cmu.edu>
+
+		* mklibgcc.in: Remove extra quotes.
+		2003-05-08  Aldy Hernandez  <aldyh@redhat.com>
+
+		* mklibgcc.in: Use mkinstalldirs when installing multilib
+		directories.
+
+2003-12-24  Roger Sayle  <roger@eyesopen.com>
+
+	Backport from mainline:
+
+	2003-09-18  Mark Mitchell  <mark@codesourcery.com>
+	* explow.c (convert_memory_address): Define even when
+	POINTERS_EXTEND_UNSIGNED is not defined.  Do nothing if the address
+	is already in the right mode.
+
+2003-12-23  Andrew Pinski  <pinskia@physics.uc.edu>
+
+	PR middle-end/13475
+	Backport from mainline:
+		2003-06-19  Aldy Hernandez  <aldyh@redhat.com>
+
+		* expr.c (const_vector_from_tree): Initialize remaining
+		elements to 0.
+
+2003-12-23  Kazu Hirata  <kazu@cs.umass.edu>
+
+	PR target/11576
+	* config/h8300/h8300.h (CONSTANT_ADDRESS_P): Allow CONST and
+	HIGH on all variants.
+
+2003-12-23  Matthias Klose  <doko@debian.org>
+
+	* config/mips/linux.h (LIB_SPEC): Use -lpthread when
+	-pthread was specified.
+
+2003-12-23  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	PR optimization/13394
+	* toplev.c (rest_of_compilation): Move call to
+	check_function_return_warnings right after the sibcall
+	optimization pass.
+
+2003-12-23  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	PR c/13382
+	* c-typeck.c (convert_for_assignment): When converting from
+	integral type to pointer type, always call convert.
+
+2003-12-22  Gabriel Dos Reis <gdr@integrable-solutions.net>
+
+	PR target/11271
+	* reload.c: Revert last backport from mainline.  It breaks s390.
+
+2003-12-21  Roger Sayle  <roger@eyesopen.com>
+
+	* config/ia64/hpux.h (TARGET_OS_CPP_BUILTINS): Define _ILP32
+	when compiling in ILP32 mode.
+
+2003-12-21  Gabriel Dos Reis <gdr@integrable-solutions.net>
+
+    Backport from mainline:
+    2003-10-31  Richard Earnshaw  <rearnsha@arm.com>
+
+	    PR target/11271
+	    * reload.c (find_reloads_address): Handle any register in
+	    (PLUS (PLUS (REG) (REG)) (CONST_INT).
+
+2003-12-21  Roger Sayle  <roger@eyesopen.com>
+
+	PR middle-end/13400
+	* ifcvt.c (noce_process_if_block): Disable unconditional write
+	optimizations if we could introduce a store to trapping memory
+	that wasn't present previously.
+
+2003-12-20  Roger Sayle  <roger@eyesopen.com>
+
+	PR optimization/13031
+	* gcse.c (cprop_jump): Backport code clean-up and bug-fix
+	from mainline [2003-05-20 Sayle, Hirata and Rennecke patch].
+	(cprop_insn): Don't attemp further substitutions if the
+	current instruction has been deleted.
+	(local_cprop_pass): Likewise.
+
+2003-12-19  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/13239
+	* builtins.c (expand_builtin_expect_jump): Update
+	TREE_VALUE (arglist) if unsave_expr_now langhook
+	created a new tree.
+
 2003-12-18  Mark Mitchell  <mark@codesourcery.com>
 
 	* config/sol2.h (LINK_ARCH32_SPEC): Define in terms of ...
@@ -19416,4 +19580,3 @@ cp:
 	* mips.h (FUNCTION_ARG_REGNO_P): Fix parentheses.
 
 See ChangeLog.7 for earlier changes.
-
