--- a/gcc-3_3-rhl-branch/gcc/cp/ChangeLog
+++ b/gcc-3_3-rhl-branch/gcc/cp/ChangeLog
@@ -1,3 +1,79 @@
+2004-01-02  Matthias Klose  <doko@debian.org>
+
+	Backport from mainline:
+	2003-12-28  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/13081
+	* decl.c (duplicate_decls): Preserve inline-ness when redeclaring
+	a function template.
+
+2003-12-20  Andrew Pinski  <pinskia@physics.uc.edu>
+
+	Backport from mainline:
+	2003-12-30  Nathan Sidwell  <nathan@codesourcery.com>
+
+		PR c++/13507
+		* decl.c (duplicate_decls): Use build_type_attribute_variant to
+		merge attributes.
+
+2003-12-30  Nathan Sidwell  <nathan@codesourcery.com>
+
+	PR c++/13445
+	* pt.c (instantiate_class_template): Push to class's scope before
+	tsubsting base.
+
+2003-12-28  Roger Sayle  <roger@eyesopen.com>
+
+	PR c++/13070
+	* decl.c (duplicate_decls): When setting the type of an anticipated
+	declaration, merge the existing type attributes.
+
+2003-12-27  Giovanni Bajo  <giovannibajo@gcc.gnu.org>
+
+	Backport from mainline:
+	2003-12-16  Giovanni Bajo  <giovannibajo@gcc.gnu.org>
+
+	PR c++/2294
+	* decl.c (push_overloaded_decl): always	construct an OVERLOAD
+	if the declaration comes from an using declaration.
+
+2003-12-26  Gabriel Dos Reis  <gdr@integrable-solutions.net>
+
+	Backport from mainline:
+	2003-12-16  Mark Mitchell  <mark@codesourcery.com>
+
+        PR c++/12696
+        * decl.c (reshape_init): Recover quickly from errors.
+	
+2003-12-26  Gabriel Dos Reis  <gdr@integrable-solutions.net>
+
+	Backport from mainline:
+	2003-12-22  Mark Mitchell  <mark@codesourcery.com>
+
+	PR C++/12862
+	* decl.c (pushdecl): Look up all namespace-scope entities in their 
+	corresponding namespace.
+
+2003-12-22  Andrew Pinski  <pinskia@physics.uc.edu>
+
+	PR c++/5050
+	* tree.c (cp_start_inlining): Remove.
+	(cp_end_inlining): Remove.
+	* cp-lang.c (LANG_HOOKS_TREE_INLINING_START_INLINING): Do not define.
+	(LANG_HOOKS_TREE_INLINING_END_INLINING): Do not define.
+	* cp-tree.h (cp_start_inlining): Do not declare.
+	(cp_end_inlining): Do not declare.
+
+2003-12-21  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/11554
+	* init.c (sort_mem_initializers): Add warning.
+
+2003-12-19  Jason Merrill  <jason@redhat.com>
+
+	PR c++/13371
+	* typeck.c (build_modify_expr): Stabilize lhs if we're narrowing.
+
 2003-12-18  Jason Merrill  <jason@redhat.com>
 
 	PR c++/12253
