2003-12-03  Jan Hubicka  <jh@suse.cz>
	* i386.c (classify_argument): Make it 64bit clean.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@75604 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_3-rhl-branch/gcc/ChangeLog
+++ b/gcc-3_3-rhl-branch/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-03  Jan Hubicka  <jh@suse.cz>
+
+	* i386.c (classify_argument): Make it 64bit clean.
+
 2003-11-30  Jan Hubicka  <jh@suse.cz>
 
 	* explow.c (round_push): Fix handling of large sizes.
