--- a/gcc-3_3-rhl-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_3-rhl-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-19  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.dg/cleanup-10.c: New test.
+	* gcc.dg/cleanup-11.c: New test.
+
 2004-01-02  Matthias Klose  <doko@debian.org>
 
 	Backport from mainline:
