--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-10  Giovanni Bajo  <giovannibajo@gcc.gnu.org>
+
+	DR 337
+	PR c++/9256
+	* g++.dg/other/abstract1.C: New test.
+
 2004-01-09  Alexandre Oliva  <aoliva@redhat.com>
 
 	* g++.dg/lookup/strong-using-1.C: New.
