--- a/fastjar/ChangeLog
+++ b/fastjar/ChangeLog
@@ -1,3 +1,11 @@
+2004-01-09  Kelley Cook  <kcook@gcc.gnu.org>
+
+	* configure.in: Rename file to ...
+	* configure.ac: ... this.  Add in AC_PREREQ(2.57)
+	* config.h.in: Regenerate.
+	* aclocal.m4: Regenerate.
+	* Makefile.in: Regenerate.
+
 2004-01-07  Andreas Tobler  <a.tobler@schweiz.ch>
 
 	* jartool.c (make_manifest): Fix off-by-one bug when creating
