--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-09  Richard Henderson  <rth@redhat.com>
+
+	* recog.c (constrain_operands): Validate mem operands.
+
 2004-01-09   James E Wilson  <wilson@specifixinc.com>
 
 	* gcc.c (init_spec): Remove -lunwind from shared case.
