--- a/gcc-3_3-branch/gcc/ChangeLog
+++ b/gcc-3_3-branch/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-09  Richard Henderson  <rth@redhat.com>
+
+	* recog.c (constrain_operands): Validate mem operands.
+
 2004-01-02  Nathanael Nerode  <neroden@gcc.gnu.org>
 
 	PR target/13069
