--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-09  Geoffrey Keating  <geoffk@apple.com>
+
+	* config/rs6000/rs6000.md (fix_trunctfdi2): Delete.
+
 2004-01-09  Richard Henderson  <rth@redhat.com>
 
 	* recog.c (constrain_operands): Validate mem operands.
