--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-09  Andrew Pinski <pinskia@physics.uc.edu>
+
+	PR debug/11231
+	* dbxout.c (dbxout_type_fields): Return if any item is error_mark_node or the
+	type is error_mark_node.
+
 2004-01-09  Geoffrey Keating  <geoffk@apple.com>
 
 	* config/rs6000/rs6000.md (fix_trunctfdi2): Delete.
