--- a/libobjc/ChangeLog
+++ b/libobjc/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-09  Andrew Ruder  <aeruder@ksu.edu>
+
+	PR libobjc/11904
+	* sarray.c (sarray_free): Free array->is_copy_of latter.
+
 2003-12-01  Zack Weinberg  <zack@codesourcery.com>
 
 	PR 11433
