--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-09  Geoffrey Keating  <geoffk@apple.com>
+
+	* gcc.dg/rs6000-ldouble-1.c: New.
+
 2004-01-10  Giovanni Bajo  <giovannibajo@gcc.gnu.org>
 
 	DR 337
