2004-01-09  Jeff Bailey  <jbailey@nisa.net>
        PR target/12561
        * config/t-gnu: Rename SYSTEM_HEADER_DIR to NATIVE_SYSTEM_HEADER_DIR.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@75633 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_3-branch/gcc/ChangeLog
+++ b/gcc-3_3-branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-09  Jeff Bailey  <jbailey@nisa.net>
+
+	PR target/12561
+	* config/t-gnu: Rename SYSTEM_HEADER_DIR to NATIVE_SYSTEM_HEADER_DIR.
+
 2004-01-09  Richard Henderson  <rth@redhat.com>
 
 	* recog.c (constrain_operands): Validate mem operands.
