--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-09  Eric Christopher  <echristo@redhat.com>
+
+	* toplev.c (rest_of_handle_cfg): Add reg_scan pass
+	if we're running mark_constant_function.
+
 2004-01-09  Jeff Bailey  <jbailey@nisa.net>
 
 	PR target/12561
