* tree.c (get_unwidened): Reorder conditions so that the null pointer 	check is done first.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75639 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-10  Richard Sandiford  <rsandifo@redhat.com>
+
+	* tree.c (get_unwidened): Reorder conditions so that the null pointer
+	check is done first.
+
 2004-01-09  Eric Christopher  <echristo@redhat.com>
 
 	* toplev.c (rest_of_handle_cfg): Add reg_scan pass
