2004-01-10  Canqun Yang <canqun@nudt.edu.cn>
	* trans-array (gfc_conv_loop_setup): Adjust comment to track
	reality.
	(gfc_array_allocate): Don't count size of element twice.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@75640 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/tree-ssa-20020619-branch/gcc/fortran/ChangeLog
+++ b/tree-ssa-20020619-branch/gcc/fortran/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-10  Canqun Yang <canqun@nudt.edu.cn>
+
+	* trans-array (gfc_conv_loop_setup): Adjust comment to track
+	reality.
+	(gfc_array_allocate): Don't count size of element twice.
+
 2004-01-04  Paul Brook  <paul@codesourcery.com>
 
 	* lang.opt (i8, r8, std=*): Remove RejectNegative.
