* resolve.c (resolve_branch): Get error message right way round.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@75641 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/tree-ssa-20020619-branch/gcc/fortran/ChangeLog
+++ b/tree-ssa-20020619-branch/gcc/fortran/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-10  Paul Brook  <paul@codesourcery.com>
+
+	* resolve.c (resolve_branch): Get error message right way round.
+
 2004-01-10  Canqun Yang <canqun@nudt.edu.cn>
 
 	* trans-array (gfc_conv_loop_setup): Adjust comment to track
