PR fortran/13467 	* trans-decl.c (gfc_create_module_variable):  Output array valued 	parameters.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@75642 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/tree-ssa-20020619-branch/gcc/fortran/ChangeLog
+++ b/tree-ssa-20020619-branch/gcc/fortran/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-10  Huang Chun  <chunhuang73@hotmail.com>
+
+	PR fortran/13467
+	* trans-decl.c (gfc_create_module_variable):  Output array valued
+	parameters.
+
 2004-01-10  Paul Brook  <paul@codesourcery.com>
 
 	* resolve.c (resolve_branch): Get error message right way round.
