* iresolve.c (gfc_resolve_transpose): Use correct kind.
	* gfortran.fortran-torture/execute/intrinsic_transpose.f90: Test
	complex variables.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@75643 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/tree-ssa-20020619-branch/gcc/fortran/ChangeLog
+++ b/tree-ssa-20020619-branch/gcc/fortran/ChangeLog
@@ -1,5 +1,9 @@
 2004-01-10  Huang Chun  <chunhuang73@hotmail.com>
 
+	* iresolve.c: Use correct kind.
+
+2004-01-10  Huang Chun  <chunhuang73@hotmail.com>
+
 	PR fortran/13467
 	* trans-decl.c (gfc_create_module_variable):  Output array valued
 	parameters.
