* MAINTAINERS: Add myself as a MIPS maintainer.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75645 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-10  Richard Sandiford  <rsandifo@redhat.com>
+
+	* MAINTAINERS: Add myself as a MIPS maintainer.
+
 2004-01-04  Nathanael Nerode  <neroden@gcc.gnu.org>
 
 	* configure.in: Use ./config.cache, not config.cache.
