--- a/gcc-3_3-branch/ChangeLog
+++ b/gcc-3_3-branch/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-10  Richard Sandiford  <rsandifo@redhat.com>
+
+	* MAINTAINERS: Add myself as a MIPS maintainer.
+
 2004-01-04  Eric Botcazou  <ebotcazou@libertysurf.fr>
 
 	* MAINTAINERS: Move myself from 'Write After Approval' to
