* config/m32r/m32r.md (flush_icache): Use 1 for 	unspec_volatile.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75647 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-10  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* config/m32r/m32r.md (flush_icache): Use 1 for
+	unspec_volatile.
+
 2004-01-10  David Edelsohn  <edelsohn@gnu.org>
 	    James E Wilson  <wilson@specifixinc.com>
 
