--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-10  Jan Hubicka  <jh@suse.cz>
+
+	* expr.c (expand_expr_real):  More curefully expand union casts.
+
 2004-01-10  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* config/m32r/m32r.md (flush_icache): Use 1 for
