* trans-intrinsic.c (gfc_conv_intrinsic_minmax): Convert mismatched 	types.
	* gfortran.fortran-torture/execute/intrinsic_minmax.f90: Test
	specific names.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@75652 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/tree-ssa-20020619-branch/gcc/fortran/ChangeLog
+++ b/tree-ssa-20020619-branch/gcc/fortran/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-10  Paul Brook  <paul@codesourcery.com>
+
+	* trans-intrinsic.c (gfc_conv_intrinsic_minmax): Convert mismatched
+	types.
+
 2004-01-10  Huang Chun  <chunhuang73@hotmail.com>
 
 	* iresolve.c: Use correct kind.
