2004-01-10  Michael Koch  <konqueror@gmx.de>
	* gnu/java/awt/image/ImageDecoder.java
	(produce): Made public.
	* gnu/java/awt/peer/GLightweightPeer.java,
	gnu/java/awt/peer/gtk/GtkToolkit.java:
	Reformated.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75653 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,13 @@
 2004-01-10  Michael Koch  <konqueror@gmx.de>
 
+	* gnu/java/awt/image/ImageDecoder.java
+	(produce): Made public.
+	* gnu/java/awt/peer/GLightweightPeer.java,
+	gnu/java/awt/peer/gtk/GtkToolkit.java:
+	Reformated.
+
+2004-01-10  Michael Koch  <konqueror@gmx.de>
+
 	* javax/swing/JRadioButtonMenuItem.java,
 	javax/swing/JSeparator.java,
 	javax/swing/JSplitPane.java,
