--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-10  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* config/m32r/m32r.md: Use define_constants for unspec and
+	unspec_volatile.
+
 2004-01-10  Jan Hubicka  <jh@suse.cz>
 
 	PR opt/11635
