2004-01-11  Michael Koch  <konqueror@gmx.de>
	* javax/swing/undo/StateEditable.java
	(RCSID): Removed redundant modifiers.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75657 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-11  Michael Koch  <konqueror@gmx.de>
+
+	* javax/swing/undo/StateEditable.java
+	(RCSID): Removed redundant modifiers.
+
 2004-01-10  Michael Koch  <konqueror@gmx.de>
 
 	* javax/print/attribute/EnumSyntax.java
