* config/mcore/lib1.asm: Fix comment formatting. 	* config/mcore/mcore-elf.h: Likewise. 	* config/mcore/mcore.c: Likewise. 	* config/mcore/mcore.h: Likewise. 	* config/mcore/mcore.md: Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75668 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2004-01-11  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* config/mcore/lib1.asm: Fix comment formatting.
+	* config/mcore/mcore-elf.h: Likewise.
+	* config/mcore/mcore.c: Likewise.
+	* config/mcore/mcore.h: Likewise.
+	* config/mcore/mcore.md: Likewise.
+
 2004-01-10  Zack Weinberg  <zack@codesourcery.com>
 
 	* c-decl.c (duplicate_decls): Break apart into...
