2004-01-11  Sascha Brawer  <brawer@dandelis.ch>
	* javax/swing/undo/CompoundEdit.java (serialVersionUID): Added.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75671 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-11  Sascha Brawer  <brawer@dandelis.ch>
+
+	* javax/swing/undo/CompoundEdit.java (serialVersionUID): Added.
+
 2004-01-11  Michael Koch  <konqueror@gmx.de>
 
 	* javax/swing/undo/StateEditable.java
