* trans-decl.c (gfc_get_symbol_decl): Don't set subroutine attr. 	* trans-types.c (gfc_sym_type): Handle external dummy procedures. 	(gfc_return_by_reference): Correct condition. 	(gfc_get_function_type): Ditto.
	* gfortran.fortran-torture/execute/mystery_proc.f90: New test.
	* gfortran.fortran-torture/compile/mystery_proc.f90: Remove.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@75673 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/tree-ssa-20020619-branch/gcc/fortran/ChangeLog
+++ b/tree-ssa-20020619-branch/gcc/fortran/ChangeLog
@@ -1,5 +1,12 @@
 2004-01-10  Paul Brook  <paul@codesourcery.com>
 
+	* trans-decl.c (gfc_get_symbol_decl): Don't set subroutine attr.
+	* trans-types.c (gfc_sym_type): Handle external dummy procedures.
+	(gfc_return_by_reference): Correct condition.
+	(gfc_get_function_type): Ditto.
+
+2004-01-10  Paul Brook  <paul@codesourcery.com>
+
 	* trans-intrinsic.c (gfc_conv_intrinsic_minmax): Convert mismatched
 	types.
 
