* intrinsic.c (add_functions): Add resolve function to dcmplx. 	* intrinsic.h (gfc_resolve_dcmplx): Add prototype. 	* iresolve.c (gfc_resolve_dcmplx): New function.
	* gfortran.fortran-torture/execute/cmplx.f90: Add dcmplx test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@75674 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/tree-ssa-20020619-branch/gcc/fortran/ChangeLog
+++ b/tree-ssa-20020619-branch/gcc/fortran/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-11  Feng Wang  <fengwang@nudt.edu.cn>
+
+	* intrinsic.c (add_functions): Add resolve function to dcmplx.
+	* intrinsic.h (gfc_resolve_dcmplx): Add prototype.
+	* iresolve.c (gfc_resolve_dcmplx): New function.
+
 2004-01-10  Paul Brook  <paul@codesourcery.com>
 
 	* trans-decl.c (gfc_get_symbol_decl): Don't set subroutine attr.
