--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,10 @@
+2004-01-11  Michael Koch  <konqueror@gmx.de>
+
+	* gnu/java/lang/reflect/TypeSignature.java
+	(getEncodingOfClass): Documentation fixed.
+	(getClassForEncoding): Give class loader to Class.forName().
+	Documentation fixed.
+
 2004-01-11  Sascha Brawer  <brawer@dandelis.ch>
 
 	* javax/swing/undo/CompoundEdit.java (serialVersionUID): Added.
