PR middle-end/13392 	* builtins.c (expand_builtin_expect_jump): Handle conditional jumps 	to drop through label.  Don't fall back to SCC even when conditional 	jump has not been found.
	* g++.dg/opt/expect2.C: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@75687 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_3-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_3-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-11  Jakub Jelinek  <jakub@redhat.com>
+
+	PR middle-end/13392
+	* g++.dg/opt/expect2.C: New test.
+
 2004-01-02  Matthias Klose  <doko@debian.org>
 
 	Backport from mainline:
