PR c++/3478 	* g++.dg/parse/error10.C: New test. 	* g++.dg/template/arg2.C: Accept "invalid type" error.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75689 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-11  Ian Lance Taylor  <ian@wasabisystems.com>
+
+	PR c++/3478
+	* g++.dg/parse/error10.C: New test.
+	* g++.dg/template/arg2.C: Accept "invalid type" error.
+
 2004-01-11  Jakub Jelinek  <jakub@redhat.com>
 
 	PR middle-end/13392
